# OSimulate

./: CMakeLists.txt  README.md
include/: utils.h
include/cpu_scheduling/: scheduling.h
include/deadlock_avoidance/: deadlock.h
include/disk_scheduling/: disk.h
include/memory_management/: memory.h
src/: main.cpp  utils.cpp
src/cpu_scheduling/: fcfs.cpp  proirity.cpp  rr.cpp  sjf.cpp
src/deadlock_avoidance/: bankers.cpp
src/disk_scheduling/: fcfs.cpp  look.cpp  scan.cpp  sstf.cpp
src/memory_management/: lifo.cpp  lru.cpp  paging.cpp  segmentation.cpp
